--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,4 +240,6 @@ endif()
 
 install(FILES org.kde.kipi_plugins.metainfo.xml DESTINATION ${KDE_INSTALL_METAINFODIR})
 
+ki18n_install(po)
+
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
